<resources>
    <string name="app_name">Q8RN</string>

    <!-- Elementos -->
    <string name="titulo_main">Questionário dos Oito Remédios Naturais</string>
    <string name="botao_realizar_quest">Realiza questionário</string>
    <string name="botao_enviar_email">Enviar dados por email</string>
    <string name="titulo_form">Preencha o formulário</string>
    <string name="botao_proximo">Próximo</string>
    <string name="logo">Logo</string>
    <string name="voltar_menu">Voltar ao menu</string>
    <string name="escore_total">Escore total</string>
    <string name="realizar_questionario">Realizar Questionário</string>
    <string name="load_data">Load data</string>
    <string name="email">Enviar Resultado Email</string>
    <string name="pontos_a_melhorar">Pontos a melhorar</string>

    <!-- Strings -->
    <string name="altura">Altura</string>
    <string name="cintura">Cintura</string>
    <string name="quadril">Quadril</string>
    <string name="cintura_quadril">Relação cintura/quadril</string>
    <string name="sexo">Sexo:</string>
    <string name="saude_mental">Saúde mental:</string>
    <string name="saude_f_sica">Saúde física:</string>
    <string name="religiao_referida">Religião Referida</string>
    <string name="profissao">Profissão</string>
    <string name="pas">Pressão arterial sistólica (PAS)</string>
    <string name="pad">Pressão arterial diastólica (PAD)</string>
    <string name="peso">Peso</string>
    <string name="masculino">Masculino</string>
    <string name="iniciais_do_nome">Iniciais do nome</string>
    <string name="idade">Idade</string>
    <string name="imc">IMC</string>
    <string name="ha_quanto_tempo">Há quantos anos</string>
    <string name="glicemia_capilar">Glicemia capilar</string>
    <string name="feminino">Feminino</string>
    <string name="espirometria">Espirometria</string>
    <string name="escolaridade">Escolaridade:</string>
    <string name="doencas_referidas">Doenças referidas</string>
    <string name="cor_da_pele">Cor da pele referida:</string>

    <!-- Copyright -->
    <string name="copyright">Copyright ©</string>
    <string name="autores_copyright">Autores: Gina Abdala e Dyrce Meira</string>
    <string name="desenvolvedor_copyright">Desenvolvedor: Gabriel Tagliari Rodrigo</string>
    <string name="supervisor_copyright">Supervisor: Roberto Sussumu Wataya</string>

    <!-- Unidade de medidas -->
    <string name="cm">Cm</string>
    <string name="kg">Kg</string>
    <string name="kg_m">Kg/m²</string>
    <string name="mm_hg">mm/Hg</string>
    <string name="mg_dl">mg/dl</string>
    <string name="dl">dl</string>

    <!-- Escore -->
    <string name="pontuacao">Pontuação:</string>
    <string name="resultado">Resultado:</string>
    <string name="step_botao_voltar">VOLTAR</string>
    <string name="step_botao_proximo">PRÓXIMO</string>
    <string name="step_botao_completar">COMPLETAR</string>
    <string name="sexo_sem_ponto">Sexo</string>

    <!-- Tabs -->
    <string name="tab_title_dados_pessoais">Dados Pessoais</string>
    <string name="tab_title_dados_biologicos">Dados Biológicos</string>
    <string name="tab_title_religiao_saude">Religião/Saúde</string>
    <string name="anos">anos</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_historico">Histórico</string>
    <string name="title_questionario">Questionário</string>
    <string name="title_entrevistado_list">Entrevistados</string>
    <string name="title_entrevistado_detail">Entrevistado Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nenhum_historico">Sem dados</string>
    <string name="cod_identificacao">Cód. Identificação</string>
    <string name="consituicao_familiar">Constituição Familiar</string>
    <string name="esforco_antes">Teste de esforço antes</string>
    <string name="esforco_depois">Teste de esforço depois</string>
    <string name="bpm">BPM</string>
    <string name="qualidade_vida">Qualidade de vida referida</string>
    <string name="o_que_melhorar">O que você deseja melhorar em sua saúde?</string>
    <string name="cintura_estatura">Relação cintura/estatura</string>
    <string name="estado_civil">Estado civil:</string>
    <string name="com_quem_mora">Com quem mora:</string>
</resources>
