<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:focusableInTouchMode="false"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_cod_identificacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="8dp"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/codIdentificacaoId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:hint="@string/cod_identificacao"
                    android:inputType="text|textCapSentences|textPersonName"
                    android:maxLength="7" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_iniciais_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="8dp"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/iniciaisNomeId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:hint="@string/iniciais_do_nome"
                    android:inputType="textCapSentences|textPersonName"
                    android:maxLength="7" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_idade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/idadeId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:hint="@string/idade"
                    android:inputType="number"
                    android:maxLength="3" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.05"
                android:paddingBottom="8dp"
                android:text="@string/anos"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroupSexoId"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/sexoTextId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="8dp"
                android:text="@string/sexo"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/masculinoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/masculino" />

            <RadioButton
                android:id="@+id/femininoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/feminino" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/corPeleTextId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/cor_da_pele"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/corPeleIdSpinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="33.36"
                android:spinnerMode="dialog"
                android:textAlignment="textStart"
                android:gravity="start" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/escolaridadeId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center_vertical"
                android:text="@string/escolaridade"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/escolaridadeIdSpinner"
                style="@style/Base.Animation.AppCompat.Dialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingBottom="8dp"
                android:paddingTop="8dp"
                android:spinnerMode="dialog"
                android:textAlignment="textStart"
                android:gravity="start"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/alturaId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/altura"
                    android:inputType="phone"
                    android:maxLength="4" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:text="@string/cm"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pesoId"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/peso"
                    android:inputType="phone"
                    android:maxLength="4" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:text="@string/kg"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_profissao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profissaoId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:hint="@string/profissao"
                    android:inputType="textCapSentences|textPersonName"
                    android:maxLength="30" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_consituicao_familiar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/constituicaoId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:ems="10"
                    android:hint="@string/consituicao_familiar"
                    android:inputType="text|textCapSentences"
                    android:maxLength="30" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>