<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="8dp"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cinturaId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:hint="@string/cintura"
                    android:inputType="number|numberDecimal"
                    android:maxLength="5" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:text="@string/cm"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                tools:ignore="RtlCompat" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="8dp"
                android:paddingTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/quadrilId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:hint="@string/quadril"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_cm2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.05"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:text="@string/cm"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/imcId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/imc"
                    android:inputType="number|numberDecimal"
                    android:maxLength="5" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:text="@string/kg_m"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                tools:ignore="RtlCompat" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/cinturaQuadrilId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/cintura_quadril"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pasId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/pa"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:text="@string/mm_hg"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/glicemiaId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/glicemia_capilar"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.01"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:text="@string/mg_dl"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                tools:ignore="RtlCompat" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/espirometriaId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.05"
                    android:hint="@string/espirometria"
                    android:inputType="numberDecimal"
                    android:maxLength="4" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0.02"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:text="@string/dl"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                tools:ignore="RtlCompat" />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/doencasId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/doencas_referidas"
                android:inputType="textCapSentences|textPersonName"
                android:maxLength="30" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/esforcoAntesId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/esforco_antes"
                    android:inputType="numberDecimal"
                    android:maxLength="30" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_bpm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:text="@string/bpm"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                tools:ignore="RtlCompat" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/esforcoDepoisId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/esforco_depois"
                    android:inputType="textCapWords|numberDecimal"
                    android:maxLength="30" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/tv_bpm2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="0"
                android:paddingBottom="8dp"
                android:paddingRight="8dp"
                android:text="@string/bpm"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                tools:ignore="RtlCompat" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>