<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_escore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="q8rn.com.q8rn.activities.EscoreActivity">

    <LinearLayout
        android:id="@+id/escores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textEscoreTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/escore_total"
            android:textAlignment="textStart"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/totalEscoreId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textResultadoId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textAlignment="textEnd"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:text="@string/pontos_a_melhorar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headerId"
        android:layout_below="@+id/escores"
        android:textSize="18sp"
        android:textAlignment="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite" />

    <ListView
        android:id="@+id/listaMelhorarId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/headerId" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/footer"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/voltarMenuId"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/voltar_menu" />

        <Button
            android:id="@+id/email"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/email" />
    </LinearLayout>

</RelativeLayout>
